tests/sksl/errors/InterfaceBlockPrivateType.glsl
### Compilation failed:

error: 2: type '$mat' is generic
    $mat g;
    ^^^^
1 error
